# bootcamp_matematicas

./: .gitignore  README.md  aplicaciones_algoritmos_primer_orden.py  descenso_gradiente.py  main.py  pyproject.toml  steepest.py
docs/: 404.html  print.html  searchindex.json
docs/book/: index.html  searchindex.js
docs/book/laboratorios/aplicaciones_primer_orden/: index.html
docs/laboratorios/aplicaciones_primer_orden/: calculo_metricas_complejidad.html
docs/laboratorios/descenso_gradiente/: index.html
mdbook/: book.toml
mdbook/src/: README.md  SUMMARY.md
